--- a/MNIST/requirements.txt
+++ b/MNIST/requirements.txt
@@ -1,6 +1,7 @@
 secml[pytorch]==0.14
 git+https://github.com/cleverhans-lab/cleverhans.git#egg=cleverhans
 torchvision
+tensorflow
 shap
 ipython
 absl-py
